<resources>
    <string name="app_name">ExecomHackathon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_email_or_password">Invalid email or password</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_exist_email">This email address already exist</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Create account</string>

    <!-- Action Bar items -->
    <string name="action_settings_singout">Sing out</string>

    <!-- Activity Text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_ulogovan">Hackathon</string>

    <!-- camera -->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="title_activity_monument">MonumentActivity</string>
    <string name="description_monument">Description</string>
    <string name="name_monument">Name</string>
    <string name="type_monument">Type</string>
    <string name="action_done">Done</string>
    <string name="title_activity_only_monument">OnlyMonumentActivity</string>
    <string name="search_title">Search</string>
    <string name="search_type">Search type</string>
</resources>
