<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.danijel.execomhackathon.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view"
                android:paddingTop="50dp"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="125dp"
                android:paddingBottom="70dp"
                android:id="@+id/view2"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:id="@+id/checkBoxRememberMe"
                android:layout_above="@+id/email_sign_in_button"
                android:layout_centerHorizontal="true"
                android:checked="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/email_sign_in_button"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/view2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="Log in"
                android:textColor="@color/abc_primary_text_material_dark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimaryLight"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="16dp"
                android:layout_alignParentBottom="true"
                android:allowUndo="false" />

        </RelativeLayout>

</LinearLayout>
