<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.danijel.execomhackathon.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_marginBottom="50dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:title="@string/register"
                android:titleTextColor="@color/iconsTint"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_name_register"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin">

                <AutoCompleteTextView
                    android:id="@+id/name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_email_register"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin">
                <AutoCompleteTextView
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_password_register1"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin">

                <EditText
                    android:id="@+id/password_register1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_password_register2"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin">

                <EditText
                    android:id="@+id/password_register2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/button_register"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/arrow"
                android:layout_marginTop="50dp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
