<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.danijel.execomhackathon.MonumentActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:id="@+id/imgMonument"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_launcher"
                        android:layout_marginBottom="20dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin">

                        <AutoCompleteTextView
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_monument"
                            android:inputType="textEmailAddress"
                            android:maxLines="5"
                            android:gravity="center"
                            android:singleLine="true"
                            android:layout_below="@+id/view"
                            android:layout_alignParentStart="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin">

                        <AutoCompleteTextView
                            android:id="@+id/nameMonument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_monument"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:gravity="center"
                            android:singleLine="true"
                            android:layout_below="@+id/view"
                            android:layout_alignParentStart="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin">

                        <AutoCompleteTextView
                            android:id="@+id/typeMonument"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/type_monument"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:gravity="center"
                            android:singleLine="true"
                            android:layout_below="@+id/view"
                            android:layout_alignParentStart="true" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <include layout="@layout/content_monument" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
